--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="ps-4">
                     <h5 class="mb-2">Visit our office</h5>
-                    <p class="mb-0">Office Address: Beside Presbyterian Church Molyko, Buea, Cameroon</p>
+                    <p class="mb-0">Office Address: Beside Presbyterian Church 237 Molyko, Buea, Cameroon</p>
                 </div>
             </div>
         </div>
