--- a/templates/pages/includes/services.html
+++ b/templates/pages/includes/services.html
@@ -61,9 +61,9 @@
                         <i class="fab fa-android text-white"></i>
                     </div>
                     <h4 class="mb-3">Apps Development</h4>
-                    <p class="m-0">your trusted partner in app development. Our experienced team creates innovative,
-                        user-friendly apps tailored to your needs. With personalized experiences, valuable insights, and
-                        ongoing support, we help you make your mark in the digital landscape. </p>
+                    <p class="m-0">Your trusted partner in app development. We create innovative, user-friendly apps
+                        tailored to your needs. With personalized experiences, valuable insights, and ongoing support,
+                        we help you make your mark in the digital landscape </p>
                     <a class="btn btn-lg btn-primary rounded" href="">
                         <i class="bi bi-arrow-right"></i>
                     </a>
@@ -107,10 +107,10 @@
                     <div class="service-icon">
                         <i class="fa fa-shield-alt text-white"></i>
                     </div>
-                    <h4 class="mb-3">Business Consulting and Dashboards</h4>
-                    <p class="m-0">We remain your number one destination for Business intelligence and data analytics
-                        and business consulting. We specialize in creating a data-driven culture, developing database
-                        systems, conducting data analysis, and building interactive dashboards in BI. </p>
+                    <h4 class="mb-3">Business Consultancy</h4>
+                    <p class="m-0">We are your top destination for Business Intelligence, data analytics, and
+                        consulting. Our expertise lies in creating a data-driven culture, developing databases,
+                        performing data analysis, and building interactive BI dashboards </p>
                     <a class="btn btn-lg btn-primary rounded" href="">
                         <i class="bi bi-arrow-right"></i>
                     </a>
@@ -123,7 +123,7 @@
                     <div class="service-icon">
                         <i class="fa fa-shield-alt text-white"></i>
                     </div>
-                    <h4 class="mb-3">Article Writing and Publication</h4>
+                    <h4 class="mb-3">Article Writing & Publication</h4>
                     <p class="m-0">We offer a range of services, including advanced statistical analysis, referencing,
                         plagiarism checking, proofreading, and editing. Our goal is to help researchers and PhD holders
                         showcase their work with integrity and impact</p>
