--- a/templates/blog/bp_detail.html
+++ b/templates/blog/bp_detail.html
@@ -12,35 +12,34 @@
 
 <!-- Page Header -->
 {% block header %}
-        <div class="container-fluid bg-primary py-5 bg-header" style="margin-bottom: 90px;">
-            <div class="row py-5">
-                <div class="col-12 pt-lg-5 mt-lg-5 text-center">
-                    <h1 class="display-4 text-white animated zoomIn">Blog</h1>
-                    <a href="{% url 'pages:home' %}" class="h5 text-white">Home</a>
-                    <i class="far fa-circle text-white px-2"></i>
-                    <a href="{% url 'blog:bp-detail' slug=post.slug %}" class="h5 text-white">{{post.title}}</a>
-                </div>
-            </div>
+<div class="container-fluid bg-primary py-5 bg-header" style="margin-bottom: 90px;">
+    <div class="row py-5">
+        <div class="col-12 pt-lg-5 mt-lg-5 text-center">
+            <h1 class="display-4 text-white animated zoomIn">Blog</h1>
+            <a href="{% url 'pages:home' %}" class="h5 text-white">Home</a>
+            <i class="far fa-circle text-white px-2"></i>
+            <a href="{% url 'blog:bp-detail' slug=post.slug %}" class="h5 text-white">{{post.title}}</a>
         </div>
+    </div>
+</div>
 {% endblock header %}
 
 {% block content %}
+<!-- Blog Start -->
+<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="container py-5">
+        <div class="row g-5">
+            <div class="col-lg-8">
+                <!-- Blog Detail Start -->
+                <div class="mb-5">
+                    <img class="img-fluid w-100 rounded mb-5" src="{{post.thumbnail.url}}" alt="">
+                    <h1 class="mb-4">{{post.title}}</h1>
+                    <p class="text-justify">{{post.content | safe}}</p>
+                </div>
+                <!-- Blog Detail End -->
 
-    <!-- Blog Start -->
-    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-8">
-                    <!-- Blog Detail Start -->
-                    <div class="mb-5">
-                        <img class="img-fluid w-100 rounded mb-5" src="{{post.thumbnail.url}}" alt="">
-                        <h1 class="mb-4">{{post.title}}</h1>
-                        <p class="text-justify" >{{post.content | safe}}</p>
-                    </div>
-                    <!-- Blog Detail End -->
-    
-                    <!-- Comment List Start -->
-                    <!-- <div class="mb-5">
+                <!-- Comment List Start -->
+                <!-- <div class="mb-5">
                         <div class="section-title section-title-sm position-relative pb-3 mb-4">
                             <h3 class="mb-0">3 Comments</h3>
                         </div>
@@ -72,42 +71,46 @@
                             </div>
                         </div>
                     </div> -->
-                    <!-- Comment List End -->
-    
-                    <!-- Comment Form Start -->
-                       <div class="bg-light rounded p-5">
-                        <div class="section-title section-title-sm position-relative pb-3 mb-4">
-                            <h3 class="mb-0">Leave A Comment</h3>
-                        </div>
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control bg-white border-0" placeholder="Your Name" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control bg-white border-0" placeholder="Your Email" style="height: 55px;">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="form-control bg-white border-0" placeholder="Website" style="height: 55px;">
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control bg-white border-0" rows="5" placeholder="Comment"></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Leave Your Comment</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <!-- Comment Form End -->
-                </div>
+                <!-- Comment List End -->
 
-                <!-- Sidebar Start -->
-                {% include 'blog/includes/blog_sidebar.html' %}
-                <!-- Sidebar End -->
+                <!-- Comment Form Start -->
+                <div class="bg-light rounded p-5">
+                    <div class="section-title section-title-sm position-relative pb-3 mb-4">
+                        <h3 class="mb-0">Leave A Comment</h3>
+                    </div>
+                    <form>
+                        <div class="row g-3">
+                            <div class="col-12 col-sm-6">
+                                <input type="text" class="form-control bg-white border-0" placeholder="Your Name"
+                                    style="height: 55px;">
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <input type="email" class="form-control bg-white border-0" placeholder="Your Email"
+                                    style="height: 55px;">
+                            </div>
+                            <div class="col-12">
+                                <input type="text" class="form-control bg-white border-0" placeholder="Website"
+                                    style="height: 55px;">
+                            </div>
+                            <div class="col-12">
+                                <textarea class="form-control bg-white border-0" rows="5"
+                                    placeholder="Comment"></textarea>
+                            </div>
+                            <div class="col-12">
+                                <button class="btn btn-primary w-100 py-3" type="submit">Leave Your Comment</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!-- Comment Form End -->
             </div>
+
+            <!-- Sidebar Start -->
+            {% include 'blog/includes/blog_sidebar.html' %}
+            <!-- Sidebar End -->
         </div>
     </div>
-    <!-- Blog End -->
+</div>
+<!-- Blog End -->
 
-    {% endblock content %}
+{% endblock content %}
