--- a/templates/ferdsilinks_website/base.html
+++ b/templates/ferdsilinks_website/base.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <title>{% block title %} {% endblock title%}</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Ferdsilinks" name="keywords">
+    <meta content="Ferdsilinks" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
