--- a/templates/ferdsilinks_website/footer.html
+++ b/templates/ferdsilinks_website/footer.html
@@ -28,7 +28,7 @@
                         </div>
                         <div class="d-flex mb-2">
                             <i class="bi bi-geo-alt text-danger me-2"></i>
-                            <p class="mb-0">Office Address: Beside Presbyterian Church Molyko, Buea, Cameroon
+                            <p class="mb-0">Office Address: Beside Presbyterian Church 237 Molyko, Buea, Cameroon
                             </p>
                         </div>
                         <div class="d-flex mb-2">
