--- a/templates/ferdsilinks_website/nav.html
+++ b/templates/ferdsilinks_website/nav.html
@@ -10,10 +10,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-0">
-            <a href="{% url 'pages:home' %}" class="nav-item nav-link  {% if 'home' in active_links %} active {% endif %} ">Home</a> 
-            <a href="{% url 'pages:about' %}" class="nav-item nav-link  {% if 'about' in active_links %} active {% endif %} ">About</a> 
-            <a href="{% url 'pages:services' %}" class="nav-item nav-link  {% if 'services' in active_links %} active {% endif %} ">Services</a> 
-            <a href="{% url 'blog:bp-list' %}" class="nav-item nav-link {% if 'blog' in active_links %} active {% endif %} ">Blog</a>
+            <a href="{% url 'pages:home' %}"
+                class="nav-item nav-link  {% if 'home' in active_links %} active {% endif %} ">Home</a>
+            <a href="{% url 'pages:about' %}"
+                class="nav-item nav-link  {% if 'about' in active_links %} active {% endif %} ">About</a>
+            <a href="{% url 'pages:services' %}"
+                class="nav-item nav-link  {% if 'services' in active_links %} active {% endif %} ">Services</a>
+            <a href="{% url 'blog:bp-list' %}"
+                class="nav-item nav-link {% if 'blog' in active_links %} active {% endif %} ">Blog</a>
             <!-- <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                 <div class="dropdown-menu m-0">
@@ -24,9 +28,12 @@
                     <a href="quote.html" class="dropdown-item">Free Quote</a>
                 </div>
             </div> -->
-            <a href="{% url 'pages:contact' %}" class="nav-item nav-link  {% if 'contact' in active_links %} active {% endif %} ">Contact</a> 
+            <a href="{% url 'pages:contact' %}"
+                class="nav-item nav-link  {% if 'contact' in active_links %} active {% endif %} ">Contact</a>
         </div>
-        <!-- <butaton type="button" class="btn text-primary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton> -->
-        <!-- <a href="https://htmlcodex.com/startup-company-website-template" class="btn btn-primary py-2 px-4 ms-3">Download Pro Version</a> -->
+        <!-- <butaton type="button" class="btn text-primary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i
+                class="fa fa-search"></i>
+        </butaton> -->
+        <a href="{% url 'pages:products' %}" class="btn btn-primary py-2 px-4 ms-3">Download</a>
     </div>
 </nav>
