--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -96,7 +96,7 @@
                     </div>
                     <div class="ps-4">
                         <h5 class="text-primary mb-0">Projects Done</h5>
-                        <h1 class="text-primary mb-0"> <span data-toggle="counter-up">1500</span>+</h1>
+                        <h1 class="text-primary mb-0"> <span data-toggle="counter-up">6500</span>+</h1>
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                     </div>
                     <div class="ps-4">
                         <h5 class="text-white mb-0">Win Awards</h5>
-                        <h1 class="text-white mb-0" data-toggle="counter-up">5</h1>
+                        <h1 class="text-white mb-0" data-toggle="counter-up">1</h1>
                     </div>
                 </div>
             </div>
@@ -200,93 +200,9 @@
 
 
 
-<!-- Pricing Plan Start -->
-<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-    <div class="container py-5">
-        <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-            <h5 class="fw-bold text-primary text-uppercase">Products</h5>
-            <h1 class="mb-0">Driving Business Success with Innovative Software Solutions</h1>
-        </div>
-        <div class="row g-0">
-            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
-                <div class="bg-light rounded">
-                    <div class="border-bottom py-4 px-5 mb-4">
-                        <h4 class="text-primary mb-1">SolaFide POS</h4>
-                        <small class="text-uppercase">Efficient Point of Sale Solution</small>
-                    </div>
-                    <div class="p-5 pt-0">
-                        <h1 class="display-5 mb-3">
-                            <!-- <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>49.00<small
-                                class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Month</small> -->
-                        </h1>
-                        <div class="d-flex justify-content-between mb-3"><span>Sales Tracking</span><i
-                                class="fa fa-check text-primary pt-1"></i></div>
-                        <div class="d-flex justify-content-between mb-3"><span>Inventory Management</span><i
-                                class="fa fa-check text-primary pt-1"></i></div>
-                        <div class="d-flex justify-content-between mb-3"><span>Reporting and Analytics</span><i
-                                class="fa fa-check text-primary pt-1"></i></div>
-                        <div class="d-flex justify-content-between mb-2"><span>Barcode Scanning</span><i
-                                class="fa fa-check text-primary pt-1"></i></div>
-                        <a href="" class="btn btn-primary py-2 px-4 mt-4">Order Now</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
-                <div class="bg-white rounded shadow position-relative" style="z-index: 1;">
-                    <div class="border-bottom py-4 px-5 mb-4">
-                        <h4 class="text-primary mb-1">SolaFide Accounting</h4>
-                        <small class="text-uppercase">Billing & Book Keeping Software</small>
-                    </div>
-                    <div class="p-5 pt-0">
-                        <h1 class="display-5 mb-3">
-                            <!-- <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>99.00<small
-                                class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Month</small> -->
-                        </h1>
-                        <div class="d-flex justify-content-between mb-3"><span>Integrated POS</span><i
-                                class="fa fa-check text-primary pt-1"></i></div>
-                        <div class="d-flex justify-content-between mb-3"><span>Invoices & Purchases</span><i
-                                class="fa fa-check text-primary pt-1"></i></div>
-                        <div class="d-flex justify-content-between mb-2"><span>Product/Service Management</span><i
-                                class="fa fa-check text-primary pt-1"></i></div>
-                        <div class="d-flex justify-content-between mb-2"><span>Customer/Supplier Management</span><i
-                                class="fa fa-check text-primary pt-1"></i></div>
-                        <div class="d-flex justify-content-between mb-3"><span>OHADA Accounting</span><i
-                                class="fa fa-check text-primary pt-1"></i></div>
-                        <div class="d-flex justify-content-between mb-3"><span>OHADA Charts of Account</span><i
-                                class="fa fa-check text-primary pt-1"></i></div>
-                        <div class="d-flex justify-content-between mb-3"><span>OHADA Financial Reporting</span><i
-                                class="fa fa-check text-primary pt-1"></i></div>
-                        <a href="{% url 'download:solafide-accounting-download' %}" class="btn btn-primary py-2 px-4 mt-4">Download Now</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
-                <div class="bg-light rounded">
-                    <div class="border-bottom py-4 px-5 mb-4">
-                        <h4 class="text-primary mb-1">SolaFide SaaS</h4>
-                        <small class="text-uppercase">For Large Size Business</small>
-                    </div>
-                    <div class="p-5 pt-0">
-                        <h1 class="display-5 mb-3">
-                            <!-- <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>149.00<small
-                                class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Month</small> -->
-                        </h1>
-                        <div class="d-flex justify-content-between mb-3"><span>SolaFide Accounting Online</span><i
-                                class="fa fa-check text-primary pt-1"></i></div>
-                        <div class="d-flex justify-content-between mb-3"><span>Dedicated VPS</span><i
-                                class="fa fa-check text-primary pt-1"></i></div>
-                        <div class="d-flex justify-content-between mb-2"><span>24/7 Support</span><i
-                                class="fa fa-check text-primary pt-1"></i></div>
-                        <div class="d-flex justify-content-between mb-2"><span>+ More</span><i
-                                class="fa fa-check text-primary pt-1"></i></div>
-                        <button href="" class="btn btn-primary py-2 px-4 mt-4 text-white" disabled>Coming soon</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Pricing Plan End -->
+<!-- Products Start -->
+{% include 'pages/includes/products.html' %}
+<!-- Products Plan End -->
 
 
 <!-- Quote Start -->
