--- a/templates/pages/includes/products.html
+++ b/templates/pages/includes/products.html
@@ -8,7 +8,7 @@
             <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
                 <div class="bg-light rounded">
                     <div class="border-bottom py-4 px-5 mb-4">
-                        <h4 class="text-primary mb-1">SolaFide POS</h4>
+                        <h4 class="text-primary mb-1">Solafide POS</h4>
                         <small class="text-uppercase">Efficient Point of Sale Solution</small>
                     </div>
                     <div class="p-5 pt-0">
@@ -31,7 +31,7 @@
             <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
                 <div class="bg-white rounded shadow position-relative" style="z-index: 1;">
                     <div class="border-bottom py-4 px-5 mb-4">
-                        <h4 class="text-primary mb-1">SolaFide Accounting</h4>
+                        <h4 class="text-primary mb-1">Solafide Accounting</h4>
                         <small class="text-uppercase">Billing & Book Keeping Software</small>
                     </div>
                     <div class="p-5 pt-0">
@@ -61,7 +61,7 @@
             <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
                 <div class="bg-light rounded">
                     <div class="border-bottom py-4 px-5 mb-4">
-                        <h4 class="text-primary mb-1">SolaFide SaaS</h4>
+                        <h4 class="text-primary mb-1">Solafide SaaS</h4>
                         <small class="text-uppercase">For Large Size Business</small>
                     </div>
                     <div class="p-5 pt-0">
@@ -69,7 +69,7 @@
                             <!-- <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>149.00<small
                                 class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Month</small> -->
                         </h1>
-                        <div class="d-flex justify-content-between mb-3"><span>SolaFide Accounting Online</span><i
+                        <div class="d-flex justify-content-between mb-3"><span>Solafide Accounting Online</span><i
                                 class="fa fa-check text-primary pt-1"></i></div>
                         <div class="d-flex justify-content-between mb-3"><span>Dedicated VPS</span><i
                                 class="fa fa-check text-primary pt-1"></i></div>
